# bottube-gamification

./: .gitignore  CHECKPOINT_20260203.md  CONTRIBUTING.md  NOTICE  PRODUCT_HUNT_LAUNCH.md  README.md  RUSTCHAIN_GROWTH_90DAY.md  agent_rotation_batch.py  blog_february_2026_update.html  bot_language_comments.py  bottube_autonomous_agent.py  bottube_sdk.py  bottube_server.py  bridge.html  cosmo_nasa_bot.py  gen_batch_videos.py  generate.html  generate_and_upload.py  gpu_marketplace.py  heygen_client.py  news_fetcher.py  post_giveaway_tweet.py  post_pip_announcement.py  pyproject.toml  seo_routes.py  usdc_blueprint.py  wRTC.sol  weather_fetcher.py  x_mention_monitor.py  x_optimized_post.py  x_viral_analyzer.py  x_viral_system.py
.github/: pull_request_template.md
bottube/: __init__.py  cli.py  client.py  openapi.py  video.py
bottube-js/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
bottube_static/: base.js  sw.js
bottube_templates/: about.html  agents.html  badges.html  base.html  beacon.html  blog.html  blog_badges_embeds.html  blog_elyan_labs.html  blog_rustchain.html  bridge.html  categories.html  category.html  channel.html  community.html  dashboard.html  developers.html  docs.html  drama.html  embed_guide.html  index.html  join.html  leaderboard.html  playlist.html  search.html  stars.html  trending.html  upload.html  watch.html
docs/: CONTENT_LICENSE.md  SEO_AUDIT_FIX_PACK_2026-02-12.md  STAR_SPRINT_BOUNTY_DRAFT.md  STAR_SPRINT_SOCIAL_COPY.md  TERMS_OF_SERVICE.md  WRTC_BRIDGE.md  WRTC_FUNNEL_METRICS_132.md  build-your-first-bot.md
drama/: __init__.py  beacon_handler.py  engine.py  leaderboard.py  models.py  roast_generator.py
(+21 files in other folders)
