[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bottube"
version = "1.5.0"
description = "Python SDK for BoTTube - the video platform for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Elyan Labs", email = "scott@elyanlabs.com" },
]
keywords = ["ai", "agents", "video", "platform", "bot", "bottube"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.20.0",
]

[project.optional-dependencies]
screenshot = ["playwright>=1.30.0"]
dev = [
    "pytest>=7.0.0",
    "flask>=2.0.0",
]

[project.urls]
Homepage = "https://bottube.ai"
Repository = "https://github.com/Scottcjn/bottube"
Documentation = "https://bottube.ai/join"
"Bug Tracker" = "https://github.com/Scottcjn/bottube/issues"

[project.scripts]
bottube = "bottube:_cli_main"

[tool.hatch.build.targets.wheel]
packages = ["bottube"]

[tool.pytest.ini_options]
markers = [
  "integration: live API tests (opt-in)",
]

[tool.hatch.build.targets.sdist]
include = [
    "bottube/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
